--- a/index.html
+++ b/index.html
@@ -42,15 +42,23 @@
       .card{flex-direction:column; align-items:flex-start}
       .logo-wrap{width:96px; height:96px}
       .logo{width:68px; height:68px}
-    }
+    } 
+    .logo-img {
+  width: 84px;
+  height: 84px;
+  border-radius: 18px;
+  object-fit: cover;
+}
+
   </style>
 </head>
 <body>
   <div class="container">
     <div class="card">
       <div class="logo-wrap">
-        <div class="logo" id="appLogo">APK</div>
-      </div>
+  <img src="Trick pro.png" alt="App Logo" class="logo-img" />
+</div>
+
 
       <div class="meta">
         <h1 class="title" id="appName">Pro Hack v5.0</h1>
