--- a/index.html
+++ b/index.html
@@ -61,22 +61,22 @@
 
 
       <div class="meta">
-        <h1 class="title" id="appName">Pro Hack v5.0</h1>
-        <p class="subtitle" id="appTag">Lightweight • Fast • For Entertainment & Tools</p>
+        <h1 class="title" id="appName">Trick Pro Hack v5.0</h1>
+        <p class="subtitle" id="appTag">Prediction • Fast • Mod Apk & Tools</p>
 
         <div class="desc" id="appDesc">
           <strong>About this APK</strong>
           <p>
-            Trick Pro v5.0 is a community-shared tool meant for testing, learning and entertainment purposes only. It helps users explore app behaviour on their devices and try out features in a safe environment. This project does <strong>not</strong> promote gambling, betting, or any activity that involves real-money wagering.
+            🌟Trick Pro v5.0 | ✨ Colour Trading Mod Apk | 💯% Free, Safe and Secure. 
+            🎁Earn Daily! 💥
           </p>
           <p>
-            Please use responsibly. We recommend installing only from trusted sources and keeping backups. By downloading you confirm you understand this is provided "as-is" for educational and entertainment use.
-          </p>
+            </p>
         </div>
 
         <div class="badges">
           <div class="badge">Safe • Free</div>
-          <div class="badge">• For Fun and Enjoy</div>
+          <div class="badge">•Fast</div>
           <div class="badge">v5.0 • 20 MB</div>
         </div>
 
@@ -94,13 +94,12 @@
           </a>
         </div>
 
-        <div class="small">Tip: for fun, enjoy and entertainment purpose only.</div>
+        <div class="small">Tip: for fun, enjoy and entertainment, earning purpose only.</div>
       </div>
     </div>
   </div>
 
-  <footer>Only for fun and entertainment purpose only and free time enjoyment. Not affiliated with any gambling or betting service.</footer>
-
+  
   <script>
     // -- Simple script to set download link and allow easy edits --
     const downloadBtn = document.getElementById('downloadBtn');
